@@ -14,7 +14,6 @@
 # You should have received a copy of the GNU General Public License along with
 # Gaupol.  If not, see <http://www.gnu.org/licenses/>.
 
-import gaupol.gtk
 import gtk
 
 from gaupol.gtk import unittest
