@@ -1,5 +1,14 @@
 2007-09-10  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
+	* data/gaupol.gtk.conf.spec:
+	Remove search.patterns and search.replacements.
+
+	* gaupol/gtk/dialogs/search.py:
+	Save search history to $HOME/.gaupol/search instead of the
+	configuration file to avoid quoting problems.
+
+2007-09-10  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
 	* data/patterns/Latn.common-error.in:
 	Add quotation marks and apostrophes at the ends of lines to the
 	"Spaces before punctuation marks" pattern.
